# protein_gmx_automation

./: .gitignore  Gromacs Codes for scripting.txt  README.md  pyproject.toml  visualize.py
New MD general files/: MD_50M.mdp  NPT.mdp  NVT.mdp  em.mdp  ions_NN.mdp  sort_mol2_bonds.pl
simulation/: LIG.itp  MD_10M.mdp
src/: config.py  run_md.py
src/research_work/: __init__.py  config.py  md_simulation.py  run_md.py  status.py
src/research_work/steps/: step_01_prepare_ligand.py  step_02_edit_topology.py  step_03_add_ions.py  step_04_energy_min.py  step_05_restraints_index.py  step_06_nvt.py  step_07_npt.py  step_08_production_md.py
src/research_work/utils/: check_step.py  console.py  file_edit.py  gmx.py  logging_setup.py  visualize.py
src/steps/: step_01_prepare_ligand.py  step_02_edit_topology.py
src/utils/: file_edit.py  gmx.py  visualize.py
