[project]
name = "research-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mason Bair", email = "mason.s.bair@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "ray[default]>=2.54.1; sys_platform != 'win32'",
]

[project.scripts]
md-simulation = "research_work.md_simulation:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
